# gnu_lordsawar

./: AUTHORS  ChangeLog  ChangeLog-freelords.old1  ChangeLog.OLD  DEPENDENCIES  Doxyfile  HACKER  Makefile.am  NEWS  README  TODO  WINDOWS  autogen.sh  configure.ac  copy-gnome-icons.sh  create-lw-file  freelords-autopack.sh  intltool-extract.in  intltool-merge.in  intltool-tarmerge  intltool-update.in  make-windows-installer.sh  make-windows-zip.sh.in
dat/: Makefile.am  README  appdata.xml  citynames  citynames.xml.in  freelords.desktop  gtkrc  heronames  heronames.xml.in  lordsawar-appdata.xml  lordsawar-editor.desktop.in.in  lordsawar-editor.rc  lordsawar.desktop  lordsawar.desktop.in.in  lordsawar.rc  ruinnames  ruinnames.xml.in  signposts  signposts.xml.in  templenames  templenames.xml.in
dat/CVS/: Entries  Repository
dat/army/: Makefile.am  README  bigdefault.lwa.in  bigdefault.xml  default.lwa.in  default.xml  heroes.xml  imperial.xml  monsters.xml  orcs.xml
dat/campaign/: Makefile.am
dat/citysets/: Makefile.am  README  bigdefault.lwc.in  bigdol.lwc.in  default.lwc.in  dol.lwc.in
dat/ggz/: Makefile.am  README.GGZ  freelords-server.dsc.in  freelords-server.room  freelords.dsc.in  lordsawar-server.dsc.in  lordsawar-server.room  lordsawar.dsc.in
dat/glade/: Makefile.am  README  about-dialog.glade  about-dialog.glade.h  about-dialog.ui  armies-report-dialog.glade  army-bonus-dialog.glade  army-bonus-dialog.glade.h  army-bonus-dialog.ui  army-gains-level-dialog.glade  army-gains-level-dialog.glade.h  army-gains-level-dialog.ui  army-info-window.glade  army-info-window.ui  buy-production-dialog.glade  buy-production-dialog.glade.h  buy-production-dialog.ui  cities-report-dialog.glade  city-defeated-dialog.glade  city-defeated-dialog.glade.h  city-defeated-dialog.ui  city-info-window.ui  city-looted-dialog.ui  city-pillaged-dialog.glade  city-pillaged-dialog.glade.h  city-pillaged-dialog.ui  city-raze-dialog.glade  city-raze-dialog.glade.h  city-raze-dialog.ui  city-razed-dialog.glade.h  city-razed-dialog.ui  city-rename-dialog.glade  city-rename-dialog.glade.h  city-rename-dialog.ui  city-sacked-dialog.glade  city-sacked-dialog.ui  city-window.glade  city-window.glade.h  city-window.ui  destination-dialog.glade  (+163 more)
dat/icons/: Makefile.am
dat/map/: 1060ms.map  2ndPunic37.map  2ndPunic37.map.in  Makefile.am  README  br802.map  dol.map  dol.map.in  target36d.map  tutorial.map
dat/music/: Makefile.am  README  music.xml
dat/shield/: Makefile.am  README  default.lws.in  dol.lws.in  plain.lws.in
dat/theme/: Makefile.am  lordsawar.theme
dat/tilesets/: Makefile.am  README  bigdefault.lwt.in  bigstark.lwt.in  bigwesnoth.lwt.in  default.lwt.in  stark.lwt.in  wesnoth.lwt.in
dat/various/: Makefile.am  README
help/: Makefile.am  create-manual-screenshot.sh  generate-figures.sh  lordsawar-editor.6  lordsawar-game-host-client.6  lordsawar-game-host-server.6  lordsawar-game-list-client.6  lordsawar-game-list-server.6  lordsawar-import.6  lordsawar.6  lordsawar.xml  main_screen.xcf  manual.map  manual.xnl
help/figures/: Makefile.am
src/: AICityInfo.cpp  AICityInfo.h  AI_Allocation.cpp  AI_Allocation.h  AI_Analysis.cpp  AI_Analysis.h  AI_Diplomacy.cpp  AI_Diplomacy.h  ArmyDialog.cpp  ArmyDialog.h  ArmyInfo.cpp  ArmyInfo.h  ArmyLevelDialog.cpp  ArmyLevelDialog.h  ArmyMedalDialog.cpp  ArmyMedalDialog.h  Backpack.cpp  Backpack.h  Campaign.cpp  Campaign.h  CityOccupationDialog.cpp  CityOccupationDialog.h  Commentator.cpp  Commentator.h  Configuration.cpp  Configuration.h  CreateScenario.cpp  CreateScenario.h  CreateScenarioRandomize.cpp  CreateScenarioRandomize.h  FightDialog.cpp  FightDialog.h  File.cpp  File.h  FogMap.cpp  FogMap.h  GameMap.cpp  GameMap.h  GamePreferencesDialog.cpp  GamePreferencesDialog.h  (+417 more)
src/CVS/: Entries  Repository
src/ai/: easy.py  generalAI.py
src/editor/: ArmyDialog.cpp  ArmyDialog.h  Bigmap.cpp  Bigmap.h  CityDialog.cpp  CityDialog.h  ConditionDialog.cpp  ConditionDialog.h  EventDialog.cpp  EventDialog.h  FindDialog.cpp  FindDialog.h  MainScreen.cpp  MainScreen.h  Makefile.am  MapGenDialog.cpp  MapGenDialog.h  NewMapDialog.cpp  NewMapDialog.h  PlayerDialog.cpp  PlayerDialog.h  README  ReactionDialog.cpp  ReactionDialog.h  RenamableLocation.cpp  RenamableLocation.h  RuinDialog.cpp  RuinDialog.h  ScenarioDialog.cpp  ScenarioDialog.h  SelectionDialog.cpp  SelectionDialog.h  SignpostDialog.cpp  SignpostDialog.h  Smallmap.cpp  Smallmap.h  StackDialog.cpp  StackDialog.h  TempleDialog.cpp  TempleDialog.h  (+127 more)
src/events/: CArmy.cpp  CArmy.h  CCounter.cpp  CCounter.h  CDead.cpp  CDead.h  CLiving.cpp  CLiving.h  CPlayer.cpp  CPlayer.h  Condition.cpp  Condition.h  EArmyKilled.cpp  EArmyKilled.h  ECityConq.cpp  ECityConq.h  EDummy.cpp  EDummy.h  EKillAll.cpp  EKillAll.h  ENextTurn.cpp  ENextTurn.h  EPlayerDead.cpp  EPlayerDead.h  ERound.cpp  ERound.h  ERuinSearch.cpp  ERuinSearch.h  EStackKilled.cpp  EStackKilled.h  EStackMove.cpp  EStackMove.h  ETempleSearch.cpp  ETempleSearch.h  Event.cpp  Event.h  Makefile.am  RActEvent.cpp  RActEvent.h  RAddGold.cpp  (+29 more)
src/ghs/: Makefile.am  README  gamehost-server.cpp  gamehost-server.h  ghs-client-main.cpp  ghs-client-tool.cpp  ghs-client-tool.h  main.cpp
src/gls/: Makefile.am  README  gamelist-server.cpp  gamelist-server.h  gls-client-main.cpp  gls-client-tool.cpp  gls-client-tool.h  lw-gls-tool.cpp  main.cpp  network-gls-common.h
src/gui/: Makefile  Makefile.am  Makefile.in  armies-report-dialog.cpp  armies-report-dialog.h  army-bonus-dialog.cpp  army-bonus-dialog.h  army-gains-level-dialog.cpp  army-gains-level-dialog.h  army-info-tip.cpp  army-info-tip.h  bar-chart.cpp  bar-chart.h  builder-cache.cpp  builder-cache.h  buy-production-dialog.cpp  buy-production-dialog.h  cities-report-dialog.cpp  cities-report-dialog.h  city-info-tip.cpp  city-info-tip.h  city-window.cpp  city-window.glade  city-window.h  cycle-button.cpp  cycle-button.h  decorated.cpp  decorated.h  destination-dialog.cpp  destination-dialog.h  diplomacy-dialog.cpp  diplomacy-dialog.h  diplomacy-report-dialog.cpp  diplomacy-report-dialog.h  (+114 more)
(+352 files in other folders)
