SUBDIRS=figures
EXTRA_DIST = $(help_DATA)
helpdir = ${datadir}/gnome/help/lordsawar/C/

help_DATA = legal.xml \
            lordsawar.xml

## for html publishing install docbook-utils:
## cd into this directory
## $ docbook2html --no-chunks lordsawar.xml
## cp -r figures lordsawar.html lordsawar-web/lordsawar/manual/0.1.1/
## do the necessary cvs adds, and then commit
