SUBDIRS=figures
EXTRA_DIST = $(noinst_DATA)
#helpdir = ${datadir}/gnome/help/lordsawar/C/

noinst_DATA = legal.xml lordsawar.xml manual.map

## for html publishing install docbook-utils:
## cd into this directory
## $ docbook2html --nochunks -e no-valid lordsawar.xml
## cp -r figures lordsawar.html lordsawar-web/lordsawar/manual/0.1.1/
## do the necessary cvs adds, and then commit

